# zellij-crew

./: Cargo.toml  DESIGN.md  HOOKS.md  Makefile  PROTOCOL.md  README.md  TESTING.md  UPSTREAM.md
.beads/: .gitignore  config.yaml  issues.jsonl
.beads/export-state/: fcbfdafdf0c87013.json
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
plugin/: Cargo.toml
plugin/src/: main.rs
src/: lib.rs  line.rs  main.rs  tab.rs
