[package]
name = "zellij-crew"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zellij plugin that auto-renames tabs with names from a configurable pool"

[dependencies]
zellij-tile = "0.43"
zellij-tile-utils = "0.43"
ansi_term = "0.12"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
