[package]
name = "zellij-crew"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zellij plugin that auto-renames tabs with names from a configurable pool"

[dependencies]
zellij-tile = { git = "https://github.com/zellij-org/zellij", rev = "75311066" }
zellij-tile-utils = { git = "https://github.com/zellij-org/zellij", rev = "75311066" }
ansi_term = "0.12"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
